data/derived/sp14/progs/unify/prog2426.ml.out
Characters 78-88:
  | Sine e -> "sin (pi*" + exprToString e;;
              ^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
